// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemDetails noItem rendering test 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(DetailsView)>
    <DetailsView
      dispatch={[Function]}
      item={null}
    >
      <div
        className="body"
      >
        <DetailsViewNoItemLabel>
          <div
            className="title"
          >
            Select any movie...
          </div>
        </DetailsViewNoItemLabel>
      </div>
    </DetailsView>
  </Connect(DetailsView)>
</Provider>
`;

exports[`ItemDetails rendering test 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(DetailsView)
    item={
      Object {
        "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
        "duration": 145,
        "genre": "action 4",
        "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
        "rating": 7.2,
        "releaseDate": "2017",
        "title": "Interstellar 4",
      }
    }
  >
    <DetailsView
      dispatch={[Function]}
      item={null}
    >
      <div
        className="body"
      >
        <DetailsViewNoItemLabel>
          <div
            className="title"
          >
            Select any movie...
          </div>
        </DetailsViewNoItemLabel>
      </div>
    </DetailsView>
  </Connect(DetailsView)>
</Provider>
`;
